@@ -54,15 +54,31 @@ static NTSTATUS PhpDuplicateHandleFromProcess(
         )))
         return status;
 
-    status = PhDuplicateObject(
-        processHandle,
-        context->HandleItem->Handle,
-        NtCurrentProcess(),
-        Handle,
-        DesiredAccess,
-        0,
-        0
-        );
+    if (KphIsConnected() && PhEqualString2(context->HandleItem->TypeName, L"File", TRUE))
+    {
+        status = PhCallKphDuplicateObjectWithTimeout(
+            processHandle,
+            context->HandleItem->Handle,
+            NtCurrentProcess(),
+            Handle,
+            DesiredAccess,
+            0,
+            0
+            );
+    }
+    else
+    {
+        status = PhDuplicateObject(
+            processHandle,
+            context->HandleItem->Handle,
+            NtCurrentProcess(),
+            Handle,
+            DesiredAccess,
+            0,
+            0
+            );
+    }
+
     NtClose(processHandle);
 
     return status;
