@@ -1053,6 +1053,16 @@ NTSTATUS PhCallNtSetSecurityObjectWithTimeout(
     _In_ PSECURITY_DESCRIPTOR SecurityDescriptor
     );
 
+NTSTATUS PhCallKphDuplicateObjectWithTimeout(
+    _In_ HANDLE SourceProcessHandle,
+    _In_ HANDLE SourceHandle,
+    _In_opt_ HANDLE TargetProcessHandle,
+    _Out_opt_ PHANDLE TargetHandle,
+    _In_ ACCESS_MASK DesiredAccess,
+    _In_ ULONG HandleAttributes,
+    _In_ ULONG Options
+    );
+
 // mapimg
 
 typedef struct _PH_MAPPED_IMAGE
